# remotebmi

./: .gitignore  404.html  CITATION.cff  CONTRIBUTING.md  README.md  TODO.md  codecov.yml  index.html  mkdocs.yml  openapi.yaml  redocly.yaml  sitemap.xml
R/: .Rbuildignore  Dockerfile  README.md  index.html
RemoteBMI.jl/: .copier-answers.yml  CITATION.cff  CODE_OF_CONDUCT.md  Project.toml  README.md  lychee.toml
bmi/: index.html
dev_docs/: index.html
docs/: bmi.md  dev_docs.md  index.md  openapi.md
julia/: .copier-answers.yml  Dockerfile  Project.toml  README.md  generator.md
julia-server/: Manifest.toml  Project.toml  README.md
openapi/: index.html
python/: .buildinfo  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
python/_sources/: index.rst.txt
python/_sources/autoapi/: index.rst.txt
python/_sources/autoapi/remotebmi/: index.rst.txt
python/_sources/autoapi/remotebmi/client/: index.rst.txt
python/_sources/autoapi/remotebmi/client/apptainer/: index.rst.txt
python/_sources/autoapi/remotebmi/client/client/: index.rst.txt
python/_sources/autoapi/remotebmi/client/docker/: index.rst.txt
python/_sources/autoapi/remotebmi/client/utils/: index.rst.txt
python/_sources/autoapi/remotebmi/reserve/: index.rst.txt
python/_sources/autoapi/remotebmi/server/: index.rst.txt
python/_sources/autoapi/remotebmi/server/api/: index.rst.txt
python/autoapi/: index.html
python/autoapi/remotebmi/: index.html
python/autoapi/remotebmi/client/: index.html
python/autoapi/remotebmi/client/apptainer/: index.html
python/autoapi/remotebmi/client/client/: index.html
python/autoapi/remotebmi/client/docker/: index.html
python/autoapi/remotebmi/client/utils/: index.html
python/autoapi/remotebmi/reserve/: index.html
python/autoapi/remotebmi/server/: index.html
python/autoapi/remotebmi/server/api/: index.html
python/docs/: index.rst
python/remotebmi/: reserve.py
python/remotebmi/client/: apptainer.py  client.py  docker.py  reserve.py  utils.py
python/remotebmi/server/: __init__.py  api.py  auth.py  build.py
python/src/remotebmi/client/: apptainer.py  client.py  docker.py  utils.py
python/src/remotebmi/server/: __init__.py  api.py
python/tests/: fake_models.py  test_client.py  test_reserve.py  test_server.py
(+187 files in other folders)
