[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "remotebmi"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "bmipy",
    "numpy", 
    # client
    "httpx",
    # server
    "connexion",
    "uvicorn",
    # docker
    "docker",
]

[project.scripts]
run-bmi-server='remotebmi.server:main'
