[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "remotebmi"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "bmipy",
    "numpy", 
    # client
    "httpx>=0.27.2",
    # server
    "connexion",
    "uvicorn",
    # docker
    "docker",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest"
]

[project.scripts]
run-bmi-server='remotebmi.server:main'

[tool.ruff]
target-version = "py310"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "A",
    # TODO enable ANN and make code more typed
    # "ANN",
    "ARG",
    "B",
    "BLE",
    "C",
    # TODO enable D and make code more descriptive
    # "D",
    "DTZ",
    "E",
    "EM",
    "ERA",
    "F",
    # TODO enable FBT and factor out booleans args to seperate functions
    # "FBT",
    "FURB",
    "I",
    "ICN",
    "ISC",
    "LOG",
    "N",
    # TODO enable NPT and use modern random
    # "NPY",
    "PD",
    "PERF",
    "PGH",
    "PLC",
    "PLE",
    # TODO enable PLR and make code less complex
    # "PLR",
    # TODO enable PT for tests/**
    # "PT",
    "PTH",
    "PLW",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SLOT",
    "SIM",
    "T",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT"
]
ignore = [
    # Conflicts with formatting
    "ISC001",
    # Conflicts with default rules
    "PLC0414",
    # Misidentifies xarrary.DataArray as pandas.DataFrame
    "PD003",
    # Lines too long
    "E501"
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "ARG", "ANN", "D", "E501", "DTZ001", "N802", "S101", "S108", "PLR2004"
]
"docs/**/*.ipynb" = [
    # Allow wide lines in notebooks
    "E501",
    # Allow prints
    "T201",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["remotebmi"]
